# FenixEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .vscode kikkieroeroe.7z  CMakeLists.txt  CMakePresets.json  FenixEngine.kdev4  Makefile  a.out  engine.cbp  engine.depend  engine.layout  imgui.ini  level.fes  save.fes  save.fes.firs
include/: OBJ_Loader.h
include/glad/: glad.h
include/openxr/: openxr.h  openxr_platform.h  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
lib/debug/: Jolt.exp  glfw3.lib
lib/release/: glfw3.lib
lib/release-small/: glfw3.lib
resources/models/: citizen.mtl  collisiontest.mtl
resources/shaders/: FragmentShader.glsl  VertexShader.glsl  debug.frag  debug.vert
resources/testmap/: testmappy.mtl
src/: FragmentShader.glsl  VertexShader.glsl  engine.cpp  engine.h  imgui.ini  main.cpp  openxr.cpp  openxr_test.cpp  server.cpp  stdafx.h
src/Editor/: CMakeLists.txt  editorwindow.cpp  editorwindow.h  editorwindow.ui  enginewidget.cpp  enginewidget.h  main.cpp  mjpegserver.cpp  mjpegserver.h
src/Engine/: CMakeLists.txt  Camera.hpp  Character.hpp  Character.hpp.autosave  DevGame.hpp  EditableGame.hpp  EditableGameBase.hpp  Game.cpp  Game.hpp  GameEditor.hpp  Mesh.hpp  Object.hpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  ScreenSaverMode.hpp  Shader.hpp  ShaderProgram.hpp  Timer.hpp  Vertex.hpp  WawaDir.hpp  XRGame.cpp  XRGame.hpp  bases.h  engine.cpp  engine.h
src/Engine/accessories/: Aura.cpp  Aura.hpp  aura.h
src/Engine/audio/: AudioVisualiser.hpp  PipeWireLoopbackCapture.hpp
src/Engine/networking/: packets.hpp
src/Engine/physics/: BasicDebugRenderer.cpp  BasicDebugRenderer.hpp  Chunk.hpp  IPhysicsObject.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsObject.cpp  PhysicsObject.hpp
src/Engine/saver/: Level.hpp
src/Engine/window/: GLFW3Window.cpp  GLFW3Window.hpp  GLFWWindow.hpp  IWindow.hpp  SDLWindow.cpp  SDLWindow.hpp
src/editor/Editor/: CMakeLists.txt  editorwindow.cpp  editorwindow.h  editorwindow.ui  enginewidget.cpp  enginewidget.h
src/engine/: Camera.hpp  Character.hpp  Game.hpp  Mesh.hpp  Object.hpp  Scene.hpp  Shader.hpp  ShaderProgram.hpp  Timer.hpp  VRGame.hpp  Vertex.hpp  bases.h  engine.cpp  engine.h  imgui.ini  openxr.hpp
src/engine/networking/: imgui.ini  networking.cpp  networking.hpp  packets.cpp  packets.hpp  udp.cpp  udp.hpp
src/engine/physics/: BasicDebugRenderer.hpp  DebugRenderer.hpp  PhysicsEngine.hpp  PhysicsObject.hpp  WireframeDebugRenderer.hpp
src/engine/physix/: PhysicsEngine.hpp  PhysicsObject.hpp  physix.hpp
src/engine/saver/: Level.hpp
src/engine/window/: GLFWWindow.hpp  IWindow.hpp  SDLWindow.hpp
src/epikor/Editor/: editorwindow.h  editorwindow.ui
src/games/Annihilation/: Annihilation.hpp  main.cpp
src/games/AudioTest/: AudioTest.hpp  WasapiLoopbackCapture.hpp  main.cpp
src/games/Cake/: .CMakeLists.txt.kate-swp  .Cake.hpp.kate-swp  AudioTest.hpp  CMakeLists.txt  Cake.code-workspace  Cake.hpp  Cake.kdev4  imgui.ini  main.cpp
src/games/Cake/resources/shaders/: FragmentShader.glsl
src/games/Chizzle/: Chizzle.hpp  main.cpp
src/games/FoxChat/: FoxChat.hpp  main.cpp
src/games/Foxcraft/: .CMakeLists.txt.kate-swp  Chunk.hpp  Foxcraft.hpp  main.cpp
src/games/Foxcraft/resources/shaders/: FragmentShader.glsl
src/games/Pool/: Pool.hpp
src/games/ShaderSavers/: FragmentShader.glsl  FragmentShaderBlob.glsl  FragmentShaderColourSwirl.glsl  FragmentShaderGradient.glsl  FragmentShaderSwirl.glsl  FragmentShaderTest.glsl  PingPongShaderSaver.hpp  ShaderSaver.hpp  ShaderSaverSDL.hpp  main.cpp  mainSDL.cpp
src/games/Tunnel/: CMakeLists.txt  Cake.hpp  Tunnel.hpp  main.cpp  session-ses_0fb6.md  session-ses_0fb6.mdfusck
src/games/Tunnel/resources/shaders/: VertexShader.glsl
src/games/Tunnel/resourcesa/shaders/: VertexShader.glsl
src/imgui/: imgui_demo.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/openxr/: steamvr_app.vrmanifest
src/resources/models/: Fizzy.mtl  Ryan.mtl  collisions.mtl  terror_carpet01.tga
src/resources/testmap/: testmappy.mtl
